Fix navigation spacing  on ms edge mobile and safari

--- a/src/components/Layout/Header.module.scss
+++ b/src/components/Layout/Header.module.scss
@@ -42,7 +42,6 @@
 
 .Navigation {
   display: flex;
-  gap: 15px;
 
   @media (min-width: 650px) {
     margin-right: 20px;
@@ -53,6 +52,10 @@
     font-weight: var(--fontWeight-bold);
     text-transform: uppercase;
   }
+
+  a:not(:last-child) {
+    margin-right: 15px;
+  }
 }
 
 .Balance {
@@ -62,6 +65,6 @@
     font-weight: var(--fontWeight-bold);
   }
   @media (min-width: 650px) {
-    border-left: 1.5px solid var(--color-text-light);
+    border-left: 1px solid var(--color-text-light);
   }
 }
